--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,15 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
-group 'org.example'
+group 'com.betahood'
 version '1.0-SNAPSHOT'
+
+
+sourceCompatibility = 1.8
+applicationName = "betahood-wildlife-tracker"
+mainClassName = "App"
 
 repositories {
     mavenCentral()
@@ -11,4 +17,12 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile "com.sparkjava:spark-core:2.6.0"
+    compile 'org.slf4j:slf4j-simple:1.7.21'
+    compile "com.sparkjava:spark-template-handlebars:2.5.5"
+    compile 'org.sql2o:sql2o:1.5.4'
+    compile group: 'org.postgresql', name: 'postgresql', version: '42.2.8'
+    compile group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4'
 }
+defaultTasks = ['clean']
+task stage(dependsOn: ['clean', 'installDist'])
